--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
+
+body {
+  button {
+    box-shadow: 0px -4px 0px 0px #B3A497 inset;
+  }
+  .res-but {
+    box-shadow: 0px -4px 0px 0px #414E73 inset;
+  }
+  .eq-but {
+    box-shadow: 0px -4px 0px 0px #93261A inset;
+    
+  }
+}
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 
