add getTextColor, getButtonTextColor and getBoxShadow

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,16 @@ body {
     box-shadow: 0px -4px 0px 0px #93261A inset;
     
   }
+  input::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    border-radius: 50px;
+    width: 16px;
+    height: 16px;
+    background-color: white;
+
 }
+ }
 
 
 @tailwind base;
