--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
     border-radius: 50px;
     width: 16px;
     height: 16px;
-    background-color: var(--thumb-color, white);;
+    background-color: var(--thumb-color, #D03F2F);;
 
 }
  }
